--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
    </head>
    <body>
-     
+
       <div class="em40_header_area_main">
          <div class="nupur-header-top">
             <div class="container">
@@ -38,9 +38,9 @@
                   <div class="col-xs-12 col-lg-4 col-xl-4 col-md-12 col-sm-12 ">
                      <div class="top-right-menu">
                         <ul class="social-icons text-right text_m_center">
-                           <li><a href="#"><i class="icofont-facebook"></i></a></li>
-                           <li><a href="#"><i class="icofont-twitter"></i></a></li>
-                           <li><a href="#"><i class="icofont-instagram"></i></a></li>
+                           <li><a href="https://www.facebook.com/yeak8"><i class="icofont-facebook"></i></a></li>
+                           <li><a href="https://x.com/Yeak8_official"><i class="icofont-twitter"></i></a></li>
+                           <li><a href="https://www.instagram.com/yeak8_official"><i class="icofont-instagram"></i></a></li>
                         </ul>
                      </div>
                   </div>
@@ -56,7 +56,7 @@
                   <div class="row logo-left">
                      <div class="col-md-3 col-sm-3 col-xs-4">
                         <div class="logo">
-                           <a class="main_sticky_main_l" href="index.html" title="nupur">
+                           <a class="main_sticky_main_l" href="https://www.yeak8.net" title="nupur">
                            <img src="assets/images/logo1.png" alt="nupur">
                            </a>
                            <a class="main_sticky_l" href="index.html" title="nupur">
@@ -70,49 +70,30 @@
                         <div class="tx_mmenu_together">
                            <nav class="nupur_menu">
                               <ul class="sub-menu">
-                                 <li class="menu-item-has-children">
+                                 <li class="">
                                     <a href="#">Home</a>
-                                    <ul class="sub-menu">
-                                       <li><a href="index.html">Home Page</a></li>
-                                       <li><a href="index.html">Home 02</a></li>
-                                    </ul>
                                  </li>
-                                 <li><a href="index.html">About</a></li>
+                                 <li><a href="#about-us">About</a></li>
+                                 <li class="">
+                                    <a href="#Our-Service">Service</a>
+                                 </li>
                                  <li class="menu-item-has-children">
-                                    <a href="#">Service</a>
+                                    <a>Elements</a>
                                     <ul class="sub-menu">
-                                       <li><a href="index.html">Service</a></li>
-                                       <li><a href="index.html">Social Marketing</a></li>
-                                       <li><a href="index.html">Technical Support</a></li>
-                                       <li><a href="index.html">Single Service</a></li>
+                                       <li><a href="#Testimonial">Testimonial</a></li>
+                                       <li><a href="#faq">Faq</a></li>
+                                       <li><a href="#Pricing">Pricing Table</a></li>
                                     </ul>
                                  </li>
                                  <li class="menu-item-has-children">
-                                    <a href="">Elements</a>
+                                    <a>More</a>
                                     <ul class="sub-menu">
-                                       <li><a href="index.html">Team</a></li>
-                                       <li><a href="index.html">Testimonial</a></li>
-                                       <li><a href="index.html">Faq</a></li>
-                                       <li class="menu-item-has-children">
-                                          <a href="#">Portfolio</a>
-                                          <ul class="sub-menu">
-                                             <li><a href="index.html">Portfolio Grid</a></li>
-                                             <li><a href="index.html">Portfolio 3Column</a></li>
-                                             <li><a href="index.html">Portfolio 4Column</a></li>
-                                          </ul>
-                                       </li>
-                                       <li><a href="index.html">Pricing Table</a></li>
+                                       <li><a href="#Skill">Skill</a></li>
+                                       <li><a href="#Choose-Us">Choose Us</a></li>
+                                       <li><a href="#Team">Team</a></li>
                                     </ul>
                                  </li>
-                                 <li class="menu-item-has-children">
-                                    <a href="#">Blog</a>
-                                    <ul class="sub-menu">
-                                       <li><a href="index.html">Blog</a></li>
-                                       <li><a href="index.html">Blog Left Sidebar</a></li>
-                                       <li><a href="index.html">Blog Right Sidebar</a></li>
-                                    </ul>
-                                 </li>
-                                 <li><a href="index.html">Contact</a></li>
+                                 <li><a href="#about-us">Contact</a></li>
                               </ul>
                            </nav>
                            <div class="main-search-menu">
@@ -145,7 +126,7 @@
 
                            <!-- menu button -->
                            <div class="donate-btn-header">
-                              <a class="dtbtn" href="#">Get A Quote </a>	
+                              <a class="dtbtn" href="#">Get A Quote </a>
                            </div>
                         </div>
                      </div>
@@ -163,7 +144,7 @@
                   <div class="mobile_menu_logo text-center">
                      <a href="index.html" title="nupur">
                      <img src="assets/images/logo1.png" alt="nupur">
-                     </a>		
+                     </a>
                   </div>
                </div>
             </div>
@@ -171,59 +152,41 @@
       </div>
 
       <!-- MOBIL MENU AREA -->
-      <div class="home-2 mbm hidden-md hidden-lg  header_area main-menu-area">
+      <div class="home-2 mbm hidden-md hidden-lg header_area main-menu-area">
          <div class="menu_area mobile-menu">
             <nav class="nupur_menu">
                <ul class="sub-menu">
-                  <li class="menu-item-has-children">
+                  <li class="">
                      <a href="#">Home</a>
-                     <ul class="sub-menu">
-                        <li><a href="index.html">Home Page</a></li>
-                        <li><a href="index.html">Home 02</a></li>
-                     </ul>
                   </li>
-                  <li><a href="index.html">About</a></li>
+                  <li><a href="#about-us">About</a></li>
+                  <li class="">
+                     <a href="#Our-Service">Service</a>
+                  </li>
                   <li class="menu-item-has-children">
-                     <a href="#">Service</a>
+                     <a>Elements</a>
                      <ul class="sub-menu">
-                        <li><a href="index.html">Service</a></li>
-                        <li><a href="index.html">Social Marketing</a></li>
-                        <li><a href="index.html">Technical Support</a></li>
-                        <li><a href="index.html">Single Service</a></li>
+                        <li><a href="#Testimonial">Testimonial</a></li>
+                        <li><a href="#faq">Faq</a></li>
+                        <li><a href="#Pricing">Pricing Table</a></li>
                      </ul>
                   </li>
                   <li class="menu-item-has-children">
-                     <a href="">Elements</a>
+                     <a>More</a>
                      <ul class="sub-menu">
-                        <li><a href="index.html">Team</a></li>
-                        <li><a href="index.html">Testimonial</a></li>
-                        <li><a href="index.html">Faq</a></li>
-                        <li class="menu-item-has-children">
-                           <a href="#">Portfolio</a>
-                           <ul class="sub-menu">
-                              <li><a href="index.html">Portfolio Grid</a></li>
-                              <li><a href="index.html">Portfolio 3Column</a></li>
-                              <li><a href="index.html">Portfolio 4Column</a></li>
-                           </ul>
-                        </li>
-                        <li><a href="index.html">Pricing Table</a></li>
+                        <li><a href="#Skill">Skill</a></li>
+                        <li><a href="#Choose-Us">Choose Us</a></li>
+                        <li><a href="#Team">Team</a></li>
                      </ul>
                   </li>
-                  <li class="menu-item-has-children">
-                     <a href="#">Blog</a>
-                     <ul class="sub-menu">
-                        <li><a href="index.html">Blog</a></li>
-                        <li><a href="index.html">Blog Left Sidebar</a></li>
-                        <li><a href="index.html">Blog Right Sidebar</a></li>
-                     </ul>
-                  </li>
-                  <li><a href="index.html">Contact</a></li>
+                  <li><a href="#about-us">Contact</a></li>
                </ul>
             </nav>
          </div>
       </div>
-      <!-- FIN MOBIL MENU AREA  -->
 
+
+      <!-- FIN MOBIL MENU AREA  -->
 
       <div class="witr_swiper_area">
          <div class="swiper-container swiper_active">
@@ -347,7 +310,7 @@
             </div>
          </div>
       </div>
-      <div class="nupur_service_area">
+      <div id="Our-Service" class="nupur_service_area">
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
@@ -533,7 +496,7 @@
             </div>
          </div>
       </div>
-      <div class="nupur_skill_area">
+      <div id="Skill" class="nupur_skill_area">
          <div class="container">
             <div class="row">
                <div class="col-lg-6 col-md-6">
@@ -628,7 +591,7 @@
          </div>
       </div>
 
-      <div class="nupur_tab_area">
+      <div id="Choose-Us" class="nupur_tab_area">
          <div class="container">
             <div class="row inner_area">
                <div class="col-lg-12">
@@ -796,7 +759,7 @@
          </div>
       </div>
 
-      <div class="nupur_team_area">
+      <div id="Team" class="nupur_team_area">
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
@@ -820,16 +783,16 @@
                         <div class="post_team_icon_8 all_team_icon_o_color">
                            <ul class="witr_pots_team_s">
                               <li>
-                                 <a href="#"><i class="icofont-facebook"></i></a>
+                                 <a href="https://www.facebook.com/yeak8"><i class="icofont-facebook"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-twitter"></i></a>
+                                 <a href="https://x.com/Yeak8_official"><i class="icofont-twitter"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-tumblr"></i></a>
+                                 <a href="https://www.tumblr.com/yeak8"><i class="icofont-tumblr"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-pinterest"></i></a>
+                                 <a href="https://www.pinterest.com.mx/Yeak8"><i class="icofont-pinterest"></i></a>
                               </li>
                            </ul>
                         </div>
@@ -854,16 +817,16 @@
                         <div class="post_team_icon_8 all_team_icon_o_color">
                            <ul class="witr_pots_team_s">
                               <li>
-                                 <a href="#"><i class="icofont-facebook"></i></a>
+                                 <a href="https://www.facebook.com/yeak8"><i class="icofont-facebook"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-twitter"></i></a>
+                                 <a href="https://x.com/Yeak8_official"><i class="icofont-twitter"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-tumblr"></i></a>
+                                 <a href="https://www.tumblr.com/yeak8"><i class="icofont-tumblr"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-pinterest"></i></a>
+                                 <a href="https://www.pinterest.com.mx/Yeak8"><i class="icofont-pinterest"></i></a>
                               </li>
                            </ul>
                         </div>
@@ -888,16 +851,16 @@
                         <div class="post_team_icon_8 all_team_icon_o_color">
                            <ul class="witr_pots_team_s">
                               <li>
-                                 <a href="#"><i class="icofont-facebook"></i></a>
+                                 <a href="https://www.facebook.com/yeak8"><i class="icofont-facebook"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-twitter"></i></a>
+                                 <a href="https://x.com/Yeak8_official"><i class="icofont-twitter"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-tumblr"></i></a>
+                                 <a href="https://www.tumblr.com/yeak8"><i class="icofont-tumblr"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-pinterest"></i></a>
+                                 <a href="https://www.pinterest.com.mx/Yeak8"><i class="icofont-pinterest"></i></a>
                               </li>
                            </ul>
                         </div>
@@ -922,16 +885,16 @@
                         <div class="post_team_icon_8 all_team_icon_o_color">
                            <ul class="witr_pots_team_s">
                               <li>
-                                 <a href="#"><i class="icofont-facebook"></i></a>
+                                 <a href="https://www.facebook.com/yeak8"><i class="icofont-facebook"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-twitter"></i></a>
+                                 <a href="https://x.com/Yeak8_official"><i class="icofont-twitter"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-tumblr"></i></a>
+                                 <a href="https://www.tumblr.com/yeak8"><i class="icofont-tumblr"></i></a>
                               </li>
                               <li>
-                                 <a href="#"><i class="icofont-pinterest"></i></a>
+                                 <a href="https://www.pinterest.com.mx/Yeak8"><i class="icofont-pinterest"></i></a>
                               </li>
                            </ul>
                         </div>
@@ -953,7 +916,7 @@
       </div>
 
       <!-- faq area -->
-      <div class="nupur_faq_area">
+      <div id="faq" class="nupur_faq_area">
          <div class="container">
             <div class="row">
                <div class="col-lg-6 col-md-6">
@@ -1054,7 +1017,9 @@
             </div>
          </div>
       </div>
-      <div class="nupur_pricing_area">
+
+      
+      <div id="Pricing" class="nupur_pricing_area">
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
@@ -1167,7 +1132,7 @@
 
 
       <!-- Testimonios -->
-      <div class="nupur_testimonial_area">
+      <div id="Testimonial" class="nupur_testimonial_area">
          <div class="container">
             <div class="row">
                <div class="col-lg-12">
@@ -1443,9 +1408,9 @@
                            <p>Our approach IT unique around what we know work we know does with is verified play.</p>
                            <p class="phone"><a href="tel: "> </a></p>
                            <div class="social-icons">
-                              <a class="facebook" href="#"><i class="icofont-facebook"></i></a>
-                              <a class="twitter" href="#"><i class="icofont-twitter"></i></a>
-                              <a class="Pinterest" href="#"><i class="icofont-pinterest"></i></a>
+                              <a class="facebook" href="https://www.facebook.com/yeak8"><i class="icofont-facebook"></i></a>
+                              <a class="twitter" href="https://x.com/Yeak8_official"><i class="icofont-twitter"></i></a>
+                              <a class="Pinterest" href="https://www.pinterest.com.mx/Yeak8"><i class="icofont-pinterest"></i></a>
                            </div>
                         </div>
                      </div>
@@ -1475,7 +1440,7 @@
                   </div>
                   <div class="col-sm-12 col-md-6  col-lg-3">
                      <div class="widget about_us">
-                        <h2 class="widget-title">About Us</h2>
+                        <h2 id="about-us" class="widget-title">About Us</h2>
                         <div class="about-footer">
                            <div class="footer-widget address">
                               <div class="footer-logo">
