--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <!--SEARCH FORM-->
                                     <div class="em-quearys-inner">
                                        <div class="em-quearys-form">
-                                          <form class="top-form-control" action="#" method="get">
+                                          <form class="top-form-control" action="index.html" method="get">
                                              <input type="text" placeholder="Type Your Keyword" name="s" value="">
                                              <button class="top-quearys-style" type="submit">
                                              <i class="icofont-long-arrow-right"></i>
