--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       <div>
          <div id="parallaxs">
            <div class="background-image"></div>
-           <h1 class="overlay-text">SERVICES</h1>
+           <h1 class="overlay-text">SERVICES.</h1>
          </div>
        </div>
        
